--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,8 @@
 /*Header*/
 
 header{
-	background:#ffffff;
+	background: rgba(0,0,0,.8);
+	/*background:#ffffff;*/
 	position:fixed;
 	width:100%;
 	top:0;
@@ -53,24 +54,39 @@ header{
 	width:100%;
 }
 
+.header_wrap{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
-
-/*.logo{*/
-/*	 margin: 26px 0 20px 0;*/
-/*}*/
+.logo{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 3px solid rgb(192,192,192);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+/*    line-height: 100px;
+    text-align: center;*/
+    margin: 3px auto;
+}
 
 
 .logo h1 {
     display: inline-block;
-    font-size: 22px;
+    font-size: 2rem;
     text-transform: uppercase;
-	color:#111111;
+	color: rgb(192,192,192) !important;
 	position:relative;
+	font-family: 'Black Ops One', cursive;
+	margin-top: 4px;
 }
 
 
-.logo h1:after {
+/*.logo h1:after {
     border-bottom: 4px solid #111111;
     content: "";
     display: block;
@@ -79,15 +95,16 @@ header{
     top: 23px;
     width: 14px;
     z-index: 0;
-}
+}*/
 
 
 
 
 
 nav#mainNav{
-	float:right;
-	margin-top:2px;
+	/*float:right;*/
+	/*margin-top:2px;*/
+	text-align: right;
 }
 
 nav#mainNav li {
@@ -97,11 +114,12 @@ nav#mainNav li {
 
 
 nav#mainNav li a{
-    color: #111111;
+    color: #fff;
     display: block;
     padding: 25px 15px;
     position: relative;
-
+    font-size: 16px;
+    /*font-weight: bold;*/
 }
 
 
@@ -118,7 +136,7 @@ nav#mainNav a.active:after {
 
 
 .mobileBtn {
-	background:#ffffff;
+	background:#e6d4d4;
 	padding:5px;
 	text-align:center;
 	border-radius:3px;
@@ -154,7 +172,7 @@ nav#mainNav a.active:after {
 }
 
 .topSocials ul li{
-	margin-top:8px;
+	margin-top:15px;
 }
 
 .topSocials ul:first-child{
@@ -171,6 +189,9 @@ nav#mainNav a.active:after {
 .topSocials ul li:first-child{
 	border-bottom:1px solid #efefef;
 	padding-bottom:8px;
+}
+.topSocials ul li i{
+	color: #fff;
 }
 
 /*End header*/
@@ -788,8 +809,18 @@ form.respondF {
 
 
 /* Mobile Landscape Size -> Tablet Portrait size*/
+
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-	
+	.showFlex{
+	display: flex !important;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    /*top: 40px;*/
+    width: 100%;
+    max-width: 250px;
+    right: 60px;
+    }
 	input, textarea{-webkit-appearance: none;-webkit-border-radius:0;}
 	html{-webkit-text-size-adjust: none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;}
 	
@@ -810,9 +841,15 @@ form.respondF {
 	nav#mainNav a.active:after{right:1px;top:22px;}
 	.topSocials{display:none;}
 	nav#mainNav li a{padding:3px 0px;display:inline-block;}
-	.mobileBtn{display: inline-block;float: right;margin-right: 10px;margin-top: -51px;position: relative;}
+	.mobileBtn{
+		display: inline-block;
+		float: right;
+		margin-right: 10px;
+		/*margin-top: -51px;*/
+		position: relative;
+	}
 	
-	 .mainSlider.flexslider{margin:73px auto 0;}
+	 .mainSlider.flexslider{margin:76px auto 0;}
 	.caption h1{font-size:20px;}
 	.caption h1 span.new:after{width:17px;top:26px;right:2px;}
 	.mainSlider .flex-direction-nav a{top:55% !important;}
@@ -853,9 +890,39 @@ form.respondF {
 	
 }
 
+
+
+@media only screen and (max-width: 768px) {
+	.logo{
+		margin: 3px auto 3px 0;
+	}
+	    nav#mainNav li a{font-size: 14px;}
+
+}
 /* Mobile Portrait Size -> Mobile Landscape Size */
 @media only screen and (max-width:479px) {
-	
+	.showFlex{
+	display: flex !important;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    /*top: 40px;*/
+    width: 100%;
+    max-width: 200px;
+    right: 45px;
+    }
+    nav#mainNav li a{font-size: 10px;}
+
+	.logo{
+    width: 40px;
+    height: 40px;
+}
+
+
+.logo h1 {
+    font-size: .9rem;
+}
+
 	input, textarea{-webkit-appearance: none;-webkit-border-radius:0;}
 	html{-webkit-text-size-adjust: none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;}
 	
@@ -875,9 +942,15 @@ form.respondF {
 	nav#mainNav a.active:after{right:1px;top:22px;}
 	.topSocials{display:none;}
 	nav#mainNav li a{padding:3px 0px;display:inline-block;}
-	.mobileBtn{display: inline-block;float: right;margin-right: 5px;margin-top: -51px;position: relative;}
+	.mobileBtn {
+		display: inline-block;
+		float: right;
+		margin-right: 5px;
+		/*margin-top: -51px;*/
+		position: relative;
+	}
 	
-	 .mainSlider.flexslider{margin:73px auto 0;}
+	 .mainSlider.flexslider{margin:46px auto 0;}
 	.caption h1{font-size:20px;}
 	.caption h1 span.new:after{width:17px;top:26px;right:2px;}
 	.mainSlider .flex-direction-nav a{top:80% !important;}
@@ -920,8 +993,3 @@ form.respondF {
 	
 	
 }
-	
-	
-	
-	
-	
