--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -813,13 +813,13 @@ form.respondF {
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 	.showFlex{
 	display: flex !important;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    /*top: 40px;*/
-    width: 100%;
-    max-width: 250px;
-    right: 60px;
+    	align-items: center;
+    	justify-content: space-around;
+    	position: absolute;
+    	top: 20px;
+    	width: 100%;
+    	max-width: 200px;
+    	right: 37px;
     }
 	input, textarea{-webkit-appearance: none;-webkit-border-radius:0;}
 	html{-webkit-text-size-adjust: none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;}
@@ -914,13 +914,13 @@ form.respondF {
     nav#mainNav li a{font-size: 10px;}
 
 	.logo{
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
 }
 
 
 .logo h1 {
-    font-size: .9rem;
+    font-size: 1.4rem;
 }
 
 	input, textarea{-webkit-appearance: none;-webkit-border-radius:0;}
@@ -944,13 +944,13 @@ form.respondF {
 	nav#mainNav li a{padding:3px 0px;display:inline-block;}
 	.mobileBtn {
 		display: inline-block;
-		float: right;
-		margin-right: 5px;
+/* 		float: right;
+		margin-right: 5px; */
 		/*margin-top: -51px;*/
 		position: relative;
 	}
 	
-	 .mainSlider.flexslider{margin:46px auto 0;}
+	 .mainSlider.flexslider{margin:66px auto 0;}
 	.caption h1{font-size:20px;}
 	.caption h1 span.new:after{width:17px;top:26px;right:2px;}
 	.mainSlider .flex-direction-nav a{top:80% !important;}
