--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -902,16 +902,16 @@ form.respondF {
 /* Mobile Portrait Size -> Mobile Landscape Size */
 @media only screen and (max-width:479px) {
 	.showFlex{
-	display: flex !important;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    /*top: 40px;*/
-    width: 100%;
-    max-width: 200px;
-    right: 45px;
+		display: flex !important;
+	    	align-items: center;
+		justify-content: space-around;
+    		position: absolute;
+    		top: 20px;
+    		width: 100%;
+    		max-width: 200px;
+    		right: 30px;
     }
-    nav#mainNav li a{font-size: 10px;}
+    nav#mainNav li a{font-size: 11px;}
 
 	.logo{
     width: 60px;
@@ -937,7 +937,7 @@ form.respondF {
 	}
 	.logo, nav#mainNav{float:none;}
 	nav#mainNav{margin-right:0;}
-	nav#mainNav ul{display:none;margin-bottom:10px;}
+	nav#mainNav ul{display:none;margin:0;}
 	nav#mainNav li{float:none; display:block;}
 	nav#mainNav a.active:after{right:1px;top:22px;}
 	.topSocials{display:none;}
