--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,7 +183,7 @@ nav#mainNav a.active:after {
 .topSocials ul:last-child{
 	margin-left:0;
 	margin-right:0;
-	border-left:1px solid #efefef;
+	border-left:1px solid #26bd38;
 }
 
 .topSocials ul li:first-child{
