--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,7 +136,7 @@ nav#mainNav a.active:after {
 
 
 .mobileBtn {
-	background:#e6d4d4;
+	background:#26bd38;
 	padding:5px;
 	text-align:center;
 	border-radius:3px;
