--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,7 +119,7 @@ nav#mainNav li a{
     padding: 25px 5px;
     position: relative;
     font-size: 16px;
-    /*font-weight: bold;*/
+    font-weight: bold;
 }
 
 
