--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -836,7 +836,7 @@ form.respondF {
 		margin: 10px auto;
 	}
 	.logo, nav#mainNav{float:none;}
-	nav#mainNav{margin-right:0;}
+	nav#mainNav{justify-content: flex-end;}
 	nav#mainNav ul{display:none;margin-bottom:10px;}
 	nav#mainNav li{float:none; display:block;}
 	nav#mainNav a.active:after{right:1px;top:22px;}
