--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,7 +104,7 @@ header{
 nav#mainNav{
 	display: flex;
    	align-items: center;
-    	justify-content: center;
+    	justify-content: flex-end;
 }
 
 nav#mainNav li {
@@ -811,7 +811,7 @@ form.respondF {
 
 /* Mobile Landscape Size -> Tablet Portrait size*/
 
-@media only screen and (min-width: 480px) and (max-width: 767px) {
+@media only screen and (min-width: 480px) and (max-width: 768px) {
 	.showFlex{
 	    display: flex !important;
 	    align-items: center;
