--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -811,7 +811,7 @@ form.respondF {
 
 /* Mobile Landscape Size -> Tablet Portrait size*/
 
-@media only screen and (min-width: 480px) and (max-width: 768px) {
+@media only screen and (min-width: 480px) and (max-width: 767px) {
 	.showFlex{
 	    display: flex !important;
 	    align-items: center;
@@ -845,7 +845,7 @@ form.respondF {
 	.mobileBtn{
 		display: inline-block;
 		float: right;
-		margin-right: 10px;
+/* 		margin-right: 10px; */
 		/*margin-top: -51px;*/
 		position: relative;
 	}
