--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -943,7 +943,7 @@ form.respondF {
 		margin: 18px auto;
 	}
 	.logo, nav#mainNav{float:none;}
-	nav#mainNav{margin-right:0;justify-content: end;}
+	nav#mainNav{margin-right:0;justify-content: flex-end !important;}
 	nav#mainNav ul{display:none;margin:0;}
 	nav#mainNav li{float:none; display:block;}
 	nav#mainNav a.active:after{right:1px;top:22px;}
