--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,13 +76,14 @@ header{
 
 
 .logo h1 {
-    display: inline-block;
-    font-size: 2rem;
-    text-transform: uppercase;
+    	display: inline-block;
+    	font-size: 2rem;
+    	text-transform: uppercase;
 	color: #26bd38 !important;
 	position:relative;
 	font-family: 'Black Ops One', cursive;
 	margin-top: 4px;
+	filter: drop-shadow(3px 2px 0px gray);
 }
 
 
@@ -148,11 +149,12 @@ nav#mainNav a.active:after {
 	-o-border-radius: 3px;
 	z-index:1000;
 	display:none;
-	box-shadow:0 0 2px rgba(0,0,0,.2);
+	filter: drop-shadow(0px 1px 2px gray);
+/* 	box-shadow:0 0 2px rgba(0,0,0,.2);
 	-webkit-box-shadow: 0 0 2px rgba(0,0,0,.2);
 	-moz-box-shadow: 0 0 2px rgba(0,0,0,.2);
 	-ms-box-shadow: 0 0 2px rgba(0,0,0,.2);
-	-o-box-shadow: 0 0 2px rgba(0,0,0,.2);
+	-o-box-shadow: 0 0 2px rgba(0,0,0,.2); */
 }
 
 
